--- a/styles/flower.css
+++ b/styles/flower.css
@@ -32,12 +32,17 @@
     /* max-width: 1440px;
     margin: auto; */
 }
+
+section{
+    margin-top: 130px;
+}
 /* nav styles */
 
 
 .navbar{
     justify-content: space-between;
     align-items: center;
+   
     margin: 30px 150px auto;
 
 }
@@ -96,9 +101,12 @@ main{
     margin-top: 40px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    
     gap:30px;
-max-width: 1250px;
-   margin: auto;  
+
+
+    max-width: 100%;
+   margin: auto 150px;
     
 }
 .plant-container{
@@ -135,11 +143,14 @@ max-width: 1250px;
 
 /* flower-lover-styles */
 .flower-lover-section{
-    margin-top: 200px;
+    /* margin-top: 200px; */
     display: flex;
     text-align:left;
     justify-content: center;
-    gap: 50px;
+    gap: 40px;
+
+    max-width: 100%;
+    margin: auto ;
 }
 
 .flower-lover-title{
@@ -155,6 +166,42 @@ max-width: 1250px;
     max-width: 540px;
     
 }
+/*  colorful-subscription-button*/
+.colorful-container{
+    display: flex;
+    background-image: url(/assets/deal-ana.png);
+    max-width: 100%;
+    height: 550px;
+            /* margin: 0; */
+    
+     background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+             justify-content: center;
+    text-align: center;
+    align-items: center;
+}
+
+.colorful-subscription-button h1{
+   
+    font-size: 3rem;
+    font-weight: bold;
+    color: #FFFFFF;
+}
+.email-input{
+    width: 664px;
+    height: 50px;
+}
+.subscribe-btn{
+    width: 186px;
+    height: 55px;
+    color: #FFFFFF;
+    background-color: #E95A08;
+    border: none;
+}
+
+
+
 
 /* footer styles */
 .footer-items{
