--- a/styles/flower.css
+++ b/styles/flower.css
@@ -166,18 +166,24 @@ main{
     max-width: 540px;
     
 }
+
+/* Deals section */
+
+
+
+
 /*  colorful-subscription-button*/
 .colorful-container{
     display: flex;
-    background-image: url(/assets/deal-ana.png);
+    background-image: url("/assets/deal-ana.png");
     max-width: 100%;
     height: 550px;
             /* margin: 0; */
     
      background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-             justify-content: center;
+     background-position: center;
+     background-repeat: no-repeat;
+     justify-content: center;
     text-align: center;
     align-items: center;
 }
