--- a/styles/flower.css
+++ b/styles/flower.css
@@ -168,6 +168,32 @@ main{
 }
 
 /* Deals section */
+.best-deals{
+    /* display: flex; */
+    text-align: center;
+    max-width: 100%;
+    margin: auto;
+}
+   .best-img{
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+   } 
+   .best-img2{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    display: calc(100% - 28px)/2;
+   gap: 27px;
+    
+    
+   }
+.best-img1 img{
+border-radius: 22px;
+}
+.best-img3{
+ border-radius: 14px;
+ /* gap: 30px; */
+}
 
 
 
@@ -175,7 +201,7 @@ main{
 /*  colorful-subscription-button*/
 .colorful-container{
     display: flex;
-    background-image: url("/assets/deal-ana.png");
+    background-image: url("/assets/news-letter-bg.png");
     max-width: 100%;
     height: 550px;
             /* margin: 0; */
